--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/work1.jpg">
+                    <img src="Images/work1-min.jpg">
                     <div class="layer">
                         <h3>Github Projects</h3>
                         <p>I have created some website projects, for showcase you can see those projects by clicking link below. </p>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/work2.jpg">
+                    <img src="Images/work2-min.jpg">
                     <div class="layer">
                         <h3>Wordpress Project</h3>
                         <p>I have created some website projects, for showcase you can see those projects by clicking link below. </p>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/work3.jpg">
+                    <img src="Images/work3-min.jpg">
                     <div class="layer">
                         <h3>Graphics Projects</h3>
                         <p>I have created some website projects, for showcase you can see those projects by clicking link below. </p>
